Projet GL/test/src/test/deca/syntax/invalid/bad_while.res
src/test/deca/syntax/invalid/bad_while.deca:11:12: no viable alternative at input 'b'
